--- a/src/styles.css
+++ b/src/styles.css
@@ -16,8 +16,8 @@
 }
 
 .pageContainer {
-	height:70vh;
-	position:relative;
+	height: max(70vh, 600px);
+	position: relative;
 }
 
 .route {
@@ -98,13 +98,13 @@
   background-position: center;
   background-repeat: no-repeat;
   position: absolute;
-  width: 400px;
-  height: 400px;
+  width: 100%;
+  height: 100%;
 }
 
 #qrcode-live {
   width: auto;
-  height: 400px;
+  height: 100%;  
   border-radius: inherit;
   display: block
 }
@@ -113,8 +113,8 @@
   display: flex;
   flex-direction: row;
   justify-content: center; 
-  width: 400px;
-  height: 400px;
+  width: calc(100vw - 40px);
+  height: calc(100vw - 40px);
   border-radius: 10px;
   overflow: hidden;
   margin-bottom: 20px;
