--- a/src/styles.css
+++ b/src/styles.css
@@ -78,6 +78,8 @@
   box-sizing:border-box;
   justify-content:center;
   align-items:center;
+  user-select: none;
+  cursor: pointer;
 }
 
 .backBtn {
@@ -88,6 +90,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  user-select: none;
+  cursor: pointer;
 }
 
 #qrcode-scanner {
@@ -98,13 +102,13 @@
   background-position: center;
   background-repeat: no-repeat;
   position: absolute;
-  width: 100%;
-  height: 100%;
+  width: calc(100vw - 60px);
+  height: calc(100vw - 60px);
 }
 
 #qrcode-live {
   width: auto;
-  height: 100%;  
+  height: calc(100vw - 60px);
   border-radius: inherit;
   display: block
 }
@@ -113,8 +117,8 @@
   display: flex;
   flex-direction: row;
   justify-content: center; 
-  width: calc(100vw - 40px);
-  height: calc(100vw - 40px);
+  width: calc(100vw - 60px);
+  height: calc(100vw - 60px);
   border-radius: 10px;
   overflow: hidden;
   margin-bottom: 20px;
