--- a/src/styles.css
+++ b/src/styles.css
@@ -187,12 +187,17 @@
 	height:0px;
 
 	z-index:auto;
+	background-color:white;
 }
 
 .popupContainer.open {
 	opacity:1;
 	width:100%;
 	height:100%;
+	top:0;
+	bottom:0;
+	left:0;
+	right:0;
 
 	z-index:1000;
 
