--- a/src/styles.css
+++ b/src/styles.css
@@ -188,6 +188,8 @@
 
 	z-index:auto;
 	background-color:white;
+
+	overflow:hidden;
 }
 
 .popupContainer.open {
@@ -204,4 +206,25 @@
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+
+.keysInput {
+	position:absolute;
+	margin-right:110px;
+
+	margin-top:23px;
+
+	height:78vh;
+	display:flex;
+	flex-direction:column;
+	justify-content:space-evenly;
+}
+
+.keysInput input {
+	display:block;
+	width:130px;
+
+	transform:rotate(-5deg);
+
 }
